DS-908 - Build Events Listing Module